# nddPlugCN2TCConvert

./: .CMakeLists.txt.swp  .CMakeLists.txt.swp_bak  CMAKESAMPLE.txt  CMakeLists.txt  README.md
doc/: details.html  details.md
src/: ScintillaEditor.cpp  ScintillaEditor.h  ch2tcexport.cpp  ch2tcexport.h  coreApplication.cpp  coreApplication.h  openccTranse.h  qtconvclass.cpp  qtconvclass.h  util.hpp
ui/: qtconvclass.ui
vs2019/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  libopencc.vcxproj  libopencc.vcxproj.filters  nddPlugCN2TCConvert.sln  nddPlugCN2TCConvert.vcxproj  nddPlugCN2TCConvert.vcxproj.filters  resource.h
vs2019/nddPlugCN2TCConvert_autogen/: mocs_compilation_Debug.cpp
vs2019/nddPlugCN2TCConvert_autogen/include_Debug/UVLADIE3JM/: moc_qtconvclass.cpp.d
vs2019/nddPlugCN2TCConvert_autogen/include_Release/: ui_qtconvclass.h
vs2019/nddPlugCN2TCConvert_autogen/include_Release/UVLADIE3JM/: moc_qtconvclass.cpp  moc_qtconvclass.cpp.d
